--- a/.soda.yml
+++ b/.soda.yml
@@ -12,7 +12,7 @@ stages:
     # -v, --version xcode版本号 默认是 8.3.3 
     # -p xcode project
     # 更多参数查看左边构建参数配置
-    - plugin_xcode -p m2048.xcodeproject
+    - plugin_xcode -p m2048.xcodeproj
     
     # 下一条指令开启IOS签名，这个步骤需要您先在证书管理中上传您的个人证书
     # 一般需要指定以下参数：
